[ADD] Compile queue

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@babel/runtime": "^7.18.9",
     "@manypkg/cli": "^0.19.1",
     "async": "3.2.5",
+    "bull": "^4.12.2",
     "check-dependency-version-consistency": "^3.0.3",
     "eslint": "^8.21.0",
     "fdir": "6.1.1",
@@ -57,6 +58,7 @@
     "node-gyp": "^9.3.1",
     "pm2": "^5.3.0",
     "prettier": "^2.8.1",
+    "redis": "^4.6.13",
     "rimraf": "^5.0.1",
     "semver": "^7.5.4",
     "turbo": "^1.10.3",
