--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -28,6 +28,7 @@
     "@tamagui/next-plugin": "latest",
     "@tamagui/next-theme": "latest",
     "app": "0.0.0",
+    "bullmq": "^5.7.4",
     "compare-versions": "^3.4.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
