--- a/apps/esphome/package.json
+++ b/apps/esphome/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "prepare-dev": "echo \"esphome dashboard does not need preparation\"",
+    "prepare-dev": "node prepare.js",
     "build": "echo \"esphome dashboard has no build step\"",
     "package": "echo \"esphome dashboard has nothing to package\"",
     "dev-standalone": "NODE_ENV=development node entrypoint.js",
@@ -14,6 +14,7 @@
     "prod": "NODE_ENV=production pm2 start pm2.config.js --no-daemon"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "pm2": "^5.3.0"
   }
 }
